--- a/app/assets/stylesheets/video.scss
+++ b/app/assets/stylesheets/video.scss
@@ -24,82 +24,35 @@
   border-radius: 50%;
   background: black;
   border: solid .5px black;
-}
-
-.mac__face-- {
-  position: absolute;
-  top: 25%;
-  left: 32.5%;
-  height: 50%;
-  width: 35%;
-  z-index: 5;
-}
-
-.mac__face--album1 {
-  position: absolute;
-  top: 25%;
-  left: 32.5%;
-  height: 50%;
-  width: 35%;
-  z-index: 5;
-  animation: swimming 5s ease-out forwards
-}
-
-.mac__face--album2 {
-  position: absolute;
-  top: 25%;
-  left: 32.5%;
-  height: 50%;
-  width: 35%;
-  z-index: 5;
-  animation: faces 5s ease-out forwards
-}
-
-.mac__face--album3 {
-  position: absolute;
-  top: 25%;
-  left: 32.5%;
-  height: 50%;
-  width: 35%;
-  z-index: 5;
-  animation: wmwtso 5s ease-out forwards
-}
-
-.mac__face--album4 {
-  position: absolute;
-  top: 25%;
-  left: 32.5%;
-  height: 50%;
-  width: 35%;
-  z-index: 5;
-  animation: am 5s ease-out forwards
+  cursor: pointer;
 }
 
 .play__song {
   position: absolute;
-  top: 10%;
-  right: 0%;
-  height: 10%;
-  width: 10%;
-  background: blue;
-  cursor: pointer;
-  color: white;
+  height: auto;
+  width: auto;
+  top: 52%;
+  left: 37%;
+  color: black;
+  font-size: 1vw;
+  z-index: 15;
+  font-family: 'Raleway', sans-serif;
 }
 
 .swimming {
   position: absolute;
-  top: 4%;
-  left: 40%;
-  height: 20%;
-  width: 20%;
+  top: 5%;
+  left: 41%;
+  height: 18%;
+  width: 18%;
   z-index: 12;
   border: solid 2px black;
 }
 
 .divine {
   position: absolute;
-  top: 14%;
-  left: 64%;
+  top: 17%;
+  left: 67%;
   height: 18%;
   width: 18%;
   z-index: 12;
@@ -107,7 +60,7 @@
 
 .blue {
   position: absolute;
-  top: 67%;
+  top: 68%;
   left: 65%;
   height: 18%;
   width: 18%;
@@ -161,8 +114,8 @@
 
 .faces {
   position: absolute;
-  right: 2.5%;
-  top: 40%;
+  right: 3%;
+  top: 42%;
   height: 18%;
   width: 18%;
   z-index: 12;
@@ -179,7 +132,7 @@
 
 .good__am {
   position: absolute;
-  left: 2.5%;
+  left: 3%;
   top: 40%;
   height: 18%;
   width: 18%;
@@ -198,7 +151,7 @@
   font-family: 'Raleway', sans-serif;
 }
 
-.circle {
+.circle-- {
   position: absolute;
   height: 250px;
   width: 250px;
@@ -211,7 +164,182 @@
   border-radius: 100%;
   z-index: 13;
   background: white;
-  animation: swimming 5s ease-out forwards
+}
+
+.circle--album1 {
+  position: absolute;
+  height: 250px;
+  width: 250px;
+  top: 30%;
+  left: 30%;
+  border-top: solid 3px #6DEA75;
+  border-right: solid 3px black;
+  border-left: solid 3px black;
+  border-bottom: solid 3px black;
+  border-radius: 100%;
+  z-index: 13;
+  background: white;
+  animation: swimming 3s ease-out forwards
+}
+
+.circle--album2 {
+  position: absolute;
+  height: 250px;
+  width: 250px;
+  top: 30%;
+  left: 30%;
+  border-top: solid 3px #6DEA75;
+  border-right: solid 3px black;
+  border-left: solid 3px black;
+  border-bottom: solid 3px black;
+  border-radius: 100%;
+  z-index: 13;
+  background: white;
+  animation: faces 3s ease-out forwards
+}
+
+.circle--album3 {
+  position: absolute;
+  height: 250px;
+  width: 250px;
+  top: 30%;
+  left: 30%;
+  border-top: solid 3px #6DEA75;
+  border-right: solid 3px black;
+  border-left: solid 3px black;
+  border-bottom: solid 3px black;
+  border-radius: 100%;
+  z-index: 13;
+  background: white;
+  animation: wmwtso 3s ease-out forwards
+}
+
+.circle--album4 {
+  position: absolute;
+  height: 250px;
+  width: 250px;
+  top: 30%;
+  left: 30%;
+  border-top: solid 3px #6DEA75;
+  border-right: solid 3px black;
+  border-left: solid 3px black;
+  border-bottom: solid 3px black;
+  border-radius: 100%;
+  z-index: 13;
+  background: white;
+  animation: am 3s ease-out forwards
+}
+
+.circle--album5 {
+  position: absolute;
+  height: 250px;
+  width: 250px;
+  top: 30%;
+  left: 30%;
+  border-top: solid 3px #6DEA75;
+  border-right: solid 3px black;
+  border-left: solid 3px black;
+  border-bottom: solid 3px black;
+  border-radius: 100%;
+  z-index: 13;
+  background: white;
+  animation: divine 3s ease-out forwards
+}
+
+.circle--album6 {
+  position: absolute;
+  height: 250px;
+  width: 250px;
+  top: 30%;
+  left: 30%;
+  border-top: solid 3px #6DEA75;
+  border-right: solid 3px black;
+  border-left: solid 3px black;
+  border-bottom: solid 3px black;
+  border-radius: 100%;
+  z-index: 13;
+  background: white;
+  animation: blue_slide 3s ease-out forwards
+}
+
+.circle--album7 {
+  position: absolute;
+  height: 250px;
+  width: 250px;
+  top: 30%;
+  left: 30%;
+  border-top: solid 3px #6DEA75;
+  border-right: solid 3px black;
+  border-left: solid 3px black;
+  border-bottom: solid 3px black;
+  border-radius: 100%;
+  z-index: 13;
+  background: white;
+  animation: kids 3s ease-out forwards
+}
+
+.circle--album8 {
+  position: absolute;
+  height: 250px;
+  width: 250px;
+  top: 30%;
+  left: 30%;
+  border-top: solid 3px #6DEA75;
+  border-right: solid 3px black;
+  border-left: solid 3px black;
+  border-bottom: solid 3px black;
+  border-radius: 100%;
+  z-index: 13;
+  background: white;
+  animation: other 3s ease-out forwards
+}
+
+.circle--album9 {
+  position: absolute;
+  height: 250px;
+  width: 250px;
+  top: 30%;
+  left: 30%;
+  border-top: solid 3px #6DEA75;
+  border-right: solid 3px black;
+  border-left: solid 3px black;
+  border-bottom: solid 3px black;
+  border-radius: 100%;
+  z-index: 13;
+  background: white;
+  animation: other 3s ease-out forwards
+}
+
+.circle--album10 {
+  position: absolute;
+  height: 250px;
+  width: 250px;
+  top: 30%;
+  left: 30%;
+  border-top: solid 3px #6DEA75;
+  border-right: solid 3px black;
+  border-left: solid 3px black;
+  border-bottom: solid 3px black;
+  border-radius: 100%;
+  z-index: 13;
+  background: white;
+  animation: other 3s ease-out forwards
+}
+
+.circle--album11 {
+  position: absolute;
+  height: 250px;
+  width: 250px;
+  top: 30%;
+  left: 30%;
+  border-top: solid 3px #6DEA75;
+  border-right: solid 3px black;
+  border-left: solid 3px black;
+  border-bottom: solid 3px black;
+  border-radius: 100%;
+  z-index: 13;
+  background: white;
+  animation: other 3s ease-out forwards
 }
 
 @keyframes swimming {
@@ -247,5 +375,41 @@
     }
     to {
         transform:rotate(810deg);
+    }
+}
+
+@keyframes divine {
+    from {
+        transform:rotate(0deg);
+    }
+    to {
+        transform:rotate(765deg);
+    }
+}
+
+@keyframes blue_slide {
+    from {
+        transform:rotate(0deg);
+    }
+    to {
+        transform:rotate(855deg);
+    }
+}
+
+@keyframes kids {
+    from {
+        transform:rotate(0deg);
+    }
+    to {
+        transform:rotate(945deg);
+    }
+}
+
+@keyframes other {
+    from {
+        transform:rotate(0deg);
+    }
+    to {
+        transform:rotate(1035deg);
     }
 }
