--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,7 @@
 
   <%= csrf_meta_tags %>
 </head>
+<link rel="shortcut icon" href="/favicon.ico"></link>
 <body>
 
   <%- flash.each do |key, value| -%>
