--- a/app/assets/stylesheets/video.scss
+++ b/app/assets/stylesheets/video.scss
@@ -580,6 +580,14 @@
   animation: other 3s ease-out forwards
 }
 
+.footer {
+  position: absolute;
+  top: 1%;
+  left: 25%;
+  font-family: 'Raleway', sans-serif;
+  color: rgba(100,100, 100, 0.5)
+}
+
 @keyframes swimming {
     from {
         transform:rotate(0deg);
