--- a/app/assets/stylesheets/video_phone.scss
+++ b/app/assets/stylesheets/video_phone.scss
@@ -583,6 +583,15 @@
     animation: other 3s ease-out forwards
   }
 
+  .footer {
+    position: absolute;
+    top: 1%;
+    left: 5%;
+    font-size: .5vmin;
+    font-family: 'Raleway', sans-serif;
+    color: rgba(100,100, 100, 0.5)
+  }
+
   @keyframes swimming {
       from {
           transform:rotate(0deg);
