--- a/app/assets/stylesheets/video_tablet.scss
+++ b/app/assets/stylesheets/video_tablet.scss
@@ -198,7 +198,7 @@
     z-index: 22;
     background: #E84E4B;
     font-size: 1.8vmin;
-    color: black;
+    color: white;
     cursor: pointer;
     font-family: 'Raleway', sans-serif;
   }
