--- a/app/assets/stylesheets/video_phone.scss
+++ b/app/assets/stylesheets/video_phone.scss
@@ -200,7 +200,7 @@
     z-index: 22;
     background: #E84E4B;
     font-size: 1.6vmin;
-    color: black;
+    color: white;
     cursor: pointer;
     font-family: 'Raleway', sans-serif;
   }
