--- a/app/assets/stylesheets/video_phone.scss
+++ b/app/assets/stylesheets/video_phone.scss
@@ -655,6 +655,57 @@
     animation: other 3s ease-out forwards
   }
 
+  .circle--album12 {
+    position: absolute;
+    height: 34vmin;
+    width: 34vmin;
+    top: 30%;
+    left: 30%;
+    border-top: solid 3px #6DEA75;
+    border-right: solid 3px black;
+    border-left: solid 3px black;
+    border-bottom: solid 3px black;
+    border-radius: 100%;
+    z-index: 13;
+    background: white;
+    cursor: pointer;
+    animation: kids 3s ease-out forwards
+  }
+
+  .circle--album13 {
+    position: absolute;
+    height: 34vmin;
+    width: 34vmin;
+    top: 30%;
+    left: 30%;
+    border-top: solid 3px #6DEA75;
+    border-right: solid 3px black;
+    border-left: solid 3px black;
+    border-bottom: solid 3px black;
+    border-radius: 100%;
+    z-index: 13;
+    background: white;
+    cursor: pointer;
+    animation: kids 3s ease-out forwards
+  }
+
+  .circle--album14 {
+    position: absolute;
+    height: 34vmin;
+    width: 34vmin;
+    top: 30%;
+    left: 30%;
+    border-top: solid 3px #6DEA75;
+    border-right: solid 3px black;
+    border-left: solid 3px black;
+    border-bottom: solid 3px black;
+    border-radius: 100%;
+    z-index: 13;
+    background: white;
+    cursor: pointer;
+    animation: kids 3s ease-out forwards
+  }
+
   .footer {
     position: absolute;
     top: 1%;
